text spacing fix

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1138,7 +1138,9 @@ content: "";
     margin-right: 30px;
     color: $white!important;
 	padding-top: 0;
-	margin-top: 10px;
+	margin-top: 5px;
+	margin-bottom: 0px;
+    padding-bottom: 5px;
 
 	@include media-breakpoint-down(desktop) {
 		margin-left: 25px;
@@ -1151,12 +1153,13 @@ content: "";
 	color: $white!important;
     margin-left: 30px;
     margin-right: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
+    padding-top: 7px;
 
     @include media-breakpoint-down(desktop) {
     	margin-left: 25px;
     	margin-right: 25px;
-    	padding-bottom: 15px;
+    	/*padding-bottom: 15px;*/
 	}
 
     p {
@@ -1214,6 +1217,12 @@ content: "";
 	    display: block;
 	    letter-spacing: .3px;
 	    line-height: 1;
+	    position: relative;
+    	top: -20px;
+	}
+	.second_word {
+		position: relative;
+    	top: -20px;
 	}
 }
 
